--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -25,7 +25,7 @@ body,
   --radius: 8px;
 }
 
-input[type="color"] {
+input[type='color'] {
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -144,11 +144,11 @@ input[type="color"] {
 
 /* Search Page */
 .search {
-  @apply flex flex-col bg-background text-foreground h-full mx-auto w-3/4;
+  @apply flex flex-col text-foreground h-full mx-auto w-3/4;
 }
 
 .search__title {
-  @apply font-normal text-2xl mt-14;
+  @apply font-normal text-2xl mt-14 text-white-50;
 }
 
 .search__subtitle {
@@ -1003,7 +1003,7 @@ input[type="color"] {
 }
 
 .course-card__content {
-  @apply flex-grow flex flex-col justify-between w-full h-full p-6;
+  @apply flex-grow  flex flex-col justify-between w-full h-full p-6;
 }
 
 .course-card__title {
@@ -1024,7 +1024,7 @@ input[type="color"] {
 
 /* Course Card Search */
 .course-card-search {
-  @apply bg-customgreys-secondarybg overflow-hidden rounded-lg hover:bg-white-100/10 transition duration-200 flex flex-col cursor-pointer border-2 h-full;
+  @apply bg-customgreys-secondarybg overflow-hidden text-white-50 rounded-lg hover:bg-white-100/10 transition duration-200 flex flex-col cursor-pointer border-2 h-full;
 }
 
 .course-card-search--selected {
@@ -1510,7 +1510,7 @@ input[type="color"] {
 }
 
 /* Add this class for group hover effect */
-[data-collapsible="icon"] .group:hover .app-sidebar__logo {
+[data-collapsible='icon'] .group:hover .app-sidebar__logo {
   @apply brightness-75;
 }
 
